# model_training_script

./: .gitignore  README.md  pyproject.toml
notebooks/azure/: azure_config.ipynb  azure_logo_pipeline.ipynb
src/scripts/: test_script.py  train_script.py
src/training/: _azure_util.py  _dataselectapp.py  _dataset.py  _ignite.py  _model.py  _script_util.py  _util.py
tests/: test_model_training_script.py
