[tool.poetry]
name = "model_training_script"
version = "0.1.0"
description = ""
authors = ["kees <kees@kees>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
torch = "^1.11.0"
pytorch-ignite = "^0.4.9"
GPUtil = "^1.4.0"
azureml-core = "^1.43.0"
toolz = "^0.11.2"
torchvision = "^0.12.0"
pandas = "^1.4.3"
indexmodel = {git = "git@github.com:samuelkees/indexmodel.git", rev = "main"}
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.15.0"
tqdm = "^4.64.0"
ml2rt = "^0.2.0"
siuba = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
